crates/zizmor/tests/integration/audit/snapshots/integration__audit__dangerous_triggers__issue_comment_step_guard_only.snap
---
source: crates/zizmor/tests/integration/audit/dangerous_triggers.rs
expression: "zizmor().input(input_under_test(\"dangerous-triggers/issue-comment-step-guard-only.yml\",)).run()?"
---
warning[dangerous-triggers]: use of fundamentally insecure workflow trigger
  --> @@INPUT@@:8:3
   |
 8 | /   respond:
 9 | |     runs-on: ubuntu-latest
10 | |     steps:
11 | |       - if: github.event.comment.author_association == 'MEMBER'
12 | |         run: echo "comment received"
   | |_____________________________________^ issue_comment job lacks an author_association guard
   |
   = note: audit confidence → Medium

3 findings (2 suppressed): 0 informational, 0 low, 1 medium, 0 high
