crates/zizmor/tests/integration/audit/snapshots/integration__audit__dangerous_triggers__multiple_dangerous.snap
---
source: crates/zizmor/tests/integration/audit/dangerous_triggers.rs
expression: "zizmor().input(input_under_test(\"dangerous-triggers/multiple-dangerous.yml\",)).run()?"
---
error[dangerous-triggers]: use of fundamentally insecure workflow trigger
 --> @@INPUT@@:1:1
  |
1 | / on:
2 | |   pull_request_target:
3 | |   issue_comment:
4 | |     types: [created]
  | |____________________^ pull_request_target is almost always used insecurely
  |
  = note: audit confidence → Medium

warning[dangerous-triggers]: use of fundamentally insecure workflow trigger
  --> @@INPUT@@:11:3
   |
11 | /   build:
12 | |     runs-on: ubuntu-latest
13 | |     steps:
14 | |       - run: echo "building"
   | |_____________________________^ issue_comment job lacks an author_association guard
   |
   = note: audit confidence → Medium

4 findings (2 suppressed): 0 informational, 0 low, 1 medium, 1 high
