crates/zizmor/tests/integration/audit/snapshots/integration__audit__dangerous_triggers__workflow_run.snap
---
source: crates/zizmor/tests/integration/audit/dangerous_triggers.rs
expression: "zizmor().input(input_under_test(\"dangerous-triggers/workflow-run.yml\",)).run()?"
---
error[dangerous-triggers]: use of fundamentally insecure workflow trigger
 --> @@INPUT@@:1:1
  |
1 | / on:
2 | |   workflow_run:
3 | |     workflows: [build]
  | |______________________^ workflow_run is almost always used insecurely
  |
  = note: audit confidence → Medium

3 findings (2 suppressed): 0 informational, 0 low, 0 medium, 1 high
